bk_ida/gccida/c0/get_attr_fp_int_src
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_fp_int_src/src/insn-attrtab.c:12855:1: error: must use 'enum' tag to refer to type 'attr_fp_int_src'
attr_fp_int_src  get_attr_fp_int_src( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_fp_int_src/src/insn-attrtab.c:12866:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 12429, "get_attr_fp_int_src"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_fp_int_src/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_fp_int_src/src/insn-attrtab.c:12866:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 12429, "get_attr_fp_int_src"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_fp_int_src/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_fp_int_src/src/obj/insn-attrtab.o] Error 1
